# Demo_Export_Files_Comparison

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .setup_env.sh  Makefile  Pipfile  README.md  behave.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-vcs.in  requirements.in  requirements.tx  requirements.txt  run_parallel_behave.sh  run_parallel_tests.sh  setup_env.sh  snapshot.txt  trigger.md
.github/workflows/: ci.yml  main.yml  test_execution.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  (+224 more)
.venv-py311/: pyvenv.cfg
allure-report/: index.html
config/: file_mappings.json  report_column_mappings.json
data/: bank_export_csv_currency_consistency_validation_params.csv  bank_export_csv_date_consistency_validation_params.csv  bank_export_csv_duplicate_transactions_validation_params.csv  bank_export_csv_missing_dates_validation_params.csv  bank_export_excel_currency_consistency_validation_params.xlsx  bank_export_excel_date_consistency_validation_params.xlsx  bank_export_excel_transaction_amounts_validation_params.xlsx
features/: environment.py
helpers/: data_validation.py  delimiter_utils.py  file_processing.py  user_notifications.py
reports/: TESTS-compliance_validation_tests.aml_suspicious_activity_validation.xml  TESTS-data_validation_tests.currency_consistency.xml  TESTS-data_validation_tests.date_format_validation.xml  TESTS-data_validation_tests.decimal_precision.xml  TESTS-data_validation_tests.delimiter_inconsistency.xml  TESTS-data_validation_tests.encoding_validation.xml  TESTS-data_validation_tests.invalid_account_numbers.xml  TESTS-data_validation_tests.invalid_currency_codes_.xml  TESTS-data_validation_tests.invalid_currency_codes_fixed.xml  TESTS-data_validation_tests.missing_values.xml  TESTS-data_validation_tests.negative_values.xml  TESTS-data_validation_tests.special_characters_validation.xml  TESTS-data_validation_tests.whitespace_handling.xml  TESTS-duplicate_integrity_tests.duplicate_accounts.xml  TESTS-duplicate_integrity_tests.duplicate_customers.xml  TESTS-duplicate_integrity_tests.duplicate_transactions.xml  TESTS-duplicate_integrity_tests.fraudulent_transactions.xml  TESTS-duplicate_integrity_tests.orphaned_transactions.xml  TESTS-duplicate_integrity_tests.transaction_mismatch.xml  TESTS-edge_case_tests.edge_cases.xml  TESTS-edge_case_tests.empty_file_validation.xml  TESTS-edge_case_tests.hidden_rows_validation.xml  TESTS-edge_case_tests.max_character_limit.xml  TESTS-edge_case_tests.null_values_handling.xml  TESTS-edge_case_tests.outlier_detection.xml  TESTS-edge_case_tests.zero_value_transactions.xml  TESTS-financial_accuracy_tests.basel_iii_capital_validation.xml  TESTS-financial_accuracy_tests.foreign_exchange_transactions.xml  TESTS-financial_accuracy_tests.interest_rate_calculations.xml  TESTS-financial_accuracy_tests.loan_mortgage_payments_validation.xml  TESTS-financial_accuracy_tests.tax_withholding_validation.xml  TESTS-performance_tests.concurrent_processing.xml  TESTS-performance_tests.delayed_processing.xml  TESTS-performance_tests.high_concurrent_users.xml  TESTS-performance_tests.large_data_performance.xml  TESTS-performance_tests.large_transaction_volumes.xml  TESTS-performance_tests.memory_usage.xml  TESTS-regression_tests.duplicate_imports_validation.xml  TESTS-regression_tests.historical_data_consistency.xml  TESTS-regression_tests.previously_resolved_issues.xml  (+12 more)
scripts/: download_large_files.py  duplicate_files.py  fix_gherkin_indentation.py  list_structure.py  prevent_delete.sh  run_tests.py  scheduler.py
test_data/: bank_export_csv_format_validation_params.csv  bank_export_csv_required_columns_validation_params.csv  bank_export_csv_transaction_amounts_validation_params.csv  bank_export_excel_duplicate_transactions_validation_params.xlsx  bank_export_excel_required_columns_validation_params.xlsx  bank_export_excel_transaction_amounts_validation_params.xlsx
utils/: file_comparator.py  install_dependencies.py
(+1424 files in other folders)
