[project]
name = "demo-export-comparison"
version = "0.1.0"
description = "Automation tests for validating CSV/Excel export files from banking systems"
authors = [
    { name = "Nadezhda Tzvetkova" }
]
requires-python = ">=3.11,<3.12"

# ==================== DEVELOPMENT TOOLS ====================
[tool.black]
line-length = 88
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", ".venv", "tests/data"]
select = ["E", "F", "W"]
ignore = ["E501"]
fix = true

[tool.mypy]
files = ["."]
python_version = "3.11"
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'venv/',
    '\\.venv/',
    '\\.pyi$',
]

# ==================== TESTING ====================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"
