[project]
name = "demo-export-comparison"
version = "0.1.0"
description = "Automation tests for validating CSV/Excel export files from banking systems"
authors = [
    { name = "Nadezhda Tzvetkova" }
]
requires-python = ">=3.11,<3.12"

# =============================
# ðŸ–¤ Black Configuration
# =============================
[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py311"]

# =============================
# ðŸ¶ Ruff Configuration
# =============================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "venv",
    ".venv",
    "tests/data",
    "__pycache__",
]
select = ["E", "F", "W"]
ignore = ["E501"]  # Ignore line length (Black handles it)
fix = true

# =============================
# ðŸ§  MyPy Configuration
# =============================
[tool.mypy]
files = ["."]
python_version = "3.11"
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    'venv/',
    '\\.venv/',
    '\\.pyi$',
    '__pycache__/',
]

# =============================
# ðŸ§ª Pytest Configuration
# =============================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "features"
]

# =============================
# ðŸ› ï¸ Build System
# =============================
[build-system]
requires = ["setuptools>=58.0.4", "wheel", "numpy<1.24"]
build-backend = "setuptools.build_meta"
